changed image and fixed the flickering page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,5 +19,5 @@ tr{
 }
 body{
     background: url(../images/train.png) no-repeat center;
-    background-size: cover;
+    background-size: 100% 100%;
 } 
